[package]
name = "nft-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.7", features = ["derive"] }
config = "0.11.0"
directories-next = "2.0.0"
image = "0.23.14"
indicatif = "0.16.2"
rand = "0.8.4"
rayon = "1.5.1"

reqwest = { version = "0.11.9", features = ["blocking", "json"] }

serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.78"
